Added unit test to prove that #631 is not an issue.
git-svn-id: http://red5.googlecode.com/svn/java/server/trunk@3939 1b6495e4-3631-0410-8e05-8f51eee8b9cc